--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
     </style>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PHNGVFW9WS"></script>
     <script>
+		window.location.href = "https://reshub.me/"
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
@@ -1014,3 +1015,4 @@
 </div>
 </body>
 </html>
+
